# Khaos-Agent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  KHAOS.md  Makefile  README.md  config.yaml  docker-compose.yml  go.work  khaos_policy.yaml  pyproject.toml  start.sh  六大AI Agent对比分析报告.md  概要设计文档.md  项目笔记.md
.github/: dependabot.yml
.github/workflows/: batch5-required-jobs.yml  browser-e2e.yml  docker-security.yml  platform-sandbox-security.yml  security-contract-matrix.yml  supply-chain-audit.yml
docs/: codex-khaos-architecture-gap-analysis.md  codex-khaos-refactor-roadmap.md  coding-runtime-alignment.md  coding-runtime-gap-analysis.md  m2-enforcement-closure-evidence.md  m3-intelligence-closure.md  platform-security-ci.md  required-status-checks.md  upstream-codex.md  verification-write-authority.md  概要设计文档.md  测试计划.md  详细设计文档.md  需求规格说明书.md  需求追踪矩阵.md
docs/adr/: ADR-006-coding-intelligence-layer.md  ADR-007-task-worktree-isolation.md  ADR-008-verification-pipeline.md  ADR-009-execution-backend.md  ADR-010-principal-bound-approval.md  ADR-011-gateway-rpc-boundary.md  ADR-012-safe-workspace-filesystem.md  ADR-013-durable-verification-authority-ledger.md  ADR-014-durable-turn-event-ledger.md  ADR-015-structured-context-compaction.md  ADR-016-side-effect-free-tui.md
go/: go.mod
go/cmd/gateway/: main.go  main_test.go
go/internal/api/: handler.go  handler_test.go  types.go
go/internal/auth/: auth.go
go/internal/metrics/: collector.go  collector_test.go
go/internal/platform/: python_client.go  python_client_f06_scanner_test.go  python_client_policy_digest_test.go  python_client_principal_test.go  python_client_project_id_test.go  python_client_test.go
go/internal/rate/: limiter.go  limiter_test.go
go/internal/ws/: conn.go  hub.go  hub_test.go
prompts/: coding.md  office.md  orchestrator.md
python/: requirements-lock.txt
python/khaos/: __init__.py  __main__.py  config.py  exceptions.py  grpc_server.py  project_context.py  rust_bridge.py  time_utils.py
python/khaos/agent/: __init__.py  approval.py  compressor.py  context_facts.py  core.py  error_handler.py  events.py
python/khaos/audit/: __init__.py  export.py  logger.py
python/khaos/channels/: __init__.py  adapter.py  dispatcher.py  models.py  registry.py  webhook.py
python/khaos/cli/: __main__.py  main.py  skills_commands.py  sse.py
python/khaos/coding/: __init__.py  context.py  contracts.py  cost_tracker.py  fingerprint.py  indexer.py  parser.py  reviewer.py  task_manager.py  verify_fix.py
python/khaos/db/: __init__.py  database.py  migrate.py  migrations_cli.py  schema.sql  state_root.py
python/khaos/maintenance/: __init__.py
python/khaos/memory/: __init__.py  manager.py  store.py
python/khaos/modes/: __init__.py  manager.py
python/khaos/permissions/: __init__.py  engine.py
python/khaos/routing/: __init__.py  moa.py  model_client.py  provider.py  router.py
python/khaos/runtime/: __init__.py  context.py  factory.py
python/khaos/scheduler/: __init__.py  engine.py  models.py
python/khaos/security/: __init__.py  browser_egress_proxy.py  browser_sandbox.py  command_guard.py  effective_policy.py  host_network.py  middleware.py  network_guard.py  path_guard.py  policy.py  sandbox.py  secret_scanner.py
python/khaos/session/: __init__.py  search.py
python/khaos/skills/: __init__.py  generator.py  loader.py  manager.py  registry.py  skill.py
python/khaos/subagents/: __init__.py  planner.py  runner.py  service.py  spawner.py
python/khaos/tools/: __init__.py  browser_tools.py  channel_tools.py  clipboard_tools.py  code_search_tools.py  cron_tools.py  file_tools.py  git_tools.py  github_tools.py  history_tools.py  markdown_tools.py  note_tools.py  orchestrator_tools.py  permission_tools.py  registry.py  sandbox_tools.py  scheduler.py  terminal_tools.py  test_tools.py  todo_tools.py  web_tools.py
python/khaos/tui/: __init__.py  app.py  brand.py  chat_panel.py  commands.py  input_panel.py  markdown.py  permission_dialog.py  status_bar.py  view_model.py
python/tests/: conftest.py  test_cli.py  test_coding_context.py  test_config.py  test_gateway_principal_flow_c_1_1.py  test_grpc_server.py  test_phase1_e2e.py  test_project_context.py  test_rust_executor.py  test_rust_file_ops.py  test_rust_process.py  test_rust_token.py  test_triad_smoke.py
python/tests/agent/: test_agent_loop.py  test_agent_loop_skills.py  test_approval_broker.py  test_compressor.py  test_error_handler.py  test_operation_approval_ledger.py  test_task_state_machine.py  test_turn_coordinator.py
python/tests/audit/: test_audit_logger.py  test_export.py
python/tests/channels/: test_adapter.py  test_channel_registry.py  test_channel_tools.py  test_dispatcher.py  test_models.py  test_webhook.py
python/tests/cli/: test_skills_commands.py  test_sse.py
python/tests/coding/: _m4_batch2_helpers.py  test_application_service.py  test_backend_selector.py  test_calls_references_real.py  (+83 more)
rust/khaos-core/: Cargo.toml  audit.toml
rust/khaos-core/.cargo/: config.toml
rust/khaos-core/src/: executor.rs  lib.rs  token.rs
web/: next.config.js  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  style.css  types.ts
(+281 files in other folders)
