[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khaos"
version = "0.1.0"
description = "Khaos AI Agent platform"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19",
    "httpx>=0.28",
    "cryptography>=42",
    "PyYAML>=6",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
tui = [
    "textual>=0.47",
    "rich>=13",
]
tree-sitter = [
    "tree-sitter==0.26.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.25.0",
    "tree-sitter-rust==0.24.2",
]

[tool.setuptools]
package-dir = {"" = "python"}
packages = {find = {where = ["python"]}}
include-package-data = true

[tool.setuptools.package-data]
"khaos.coding.intelligence" = ["queries/**/*.scm"]

[project.scripts]
khaos = "khaos.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["python"]
testpaths = ["python/tests"]
markers = ["tree_sitter_real: requires locked Tree-sitter optional dependencies"]
