[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khaos"
version = "0.1.0"
description = "Khaos AI Agent platform"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19",
    "httpx>=0.28.1",
    "cryptography>=42",
    "PyYAML>=6",
    "google-re2>=1",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
tui = [
    "textual>=0.47",
    "rich>=13",
    "Pillow>=10",
]
# M2: browser E2E extra.  Pulls in Playwright so the security route guard,
# BrowserContext lifecycle and concurrent-session isolation tests can run
# against a real Chromium instance.  The matching browser binaries must
# still be downloaded separately via ``playwright install chromium``.
# B2: pinned to >=1.48 because ``context.route_web_socket()`` (the
# WebSocket bypass closure) was only added in 1.48.  Older builds fail
# closed at runtime via a ``hasattr`` probe in ``_install_route_guard``.
browser = [
    "playwright>=1.48",
]
tree-sitter = [
    "tree-sitter==0.26.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.25.0",
    "tree-sitter-rust==0.24.2",
]
lsp = [
    "pyright>=1.1",
]

[tool.setuptools]
package-dir = {"" = "python"}
packages = {find = {where = ["python"]}}
include-package-data = true

[tool.setuptools.package-data]
"khaos.coding.intelligence" = ["queries/**/*.scm"]

[project.scripts]
khaos = "khaos.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["python"]
testpaths = ["python/tests"]
markers = [
    "security_contract: cross-platform security contract without a real OS sandbox",
    "platform_sandbox_real: requires a real OS-enforced platform sandbox",
    "docker_sandbox_real: requires a real Docker daemon and pinned image",
    "windows_fail_closed: proves Windows refuses execution while no backend exists",
    "tree_sitter_real: requires locked Tree-sitter optional dependencies",
    "lsp_real: requires a trusted pre-installed Language Server (never downloaded at test time)",
    "production_sandbox_real: requires a supported production sandbox daemon and pinned image",
    # M2: real Playwright + Chromium binaries.  Tests marked with this
    # exercise the live ``context.route`` route guard, BrowserContext
    # lifecycle / refcount, scheme allowlist and concurrent-session
    # isolation.  Skipped automatically when Playwright or the browser
    # binary is missing, and gated by ``KHAOS_RUN_BROWSER_E2E=1`` so
    # local ``pytest`` runs don't require the heavy dependency.
    "browser_real: requires Playwright and downloaded browser binaries",
]
